--- a/TextSimpleKerning/index.html
+++ b/TextSimpleKerning/index.html
@@ -1,13 +1,14 @@
 <html>
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- PLEASE NO CHANGES BELOW THIS LINE (UNTIL I SAY SO) -->
   <script language="javascript" type="text/javascript" src="libraries/p5.min.js"></script>
-  <script language="javascript" type="text/javascript" src="TextSimpleKerning.js"></script>
+  <script language="javascript" type="text/javascript" src="libraries/p5.sound.js"></script>
+  <script language="javascript" type="text/javascript" src="Juliet_Serif_Sampler.js"></script>
   <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
-
+  
   <!-- This line removes any default padding and style.
        You might only need one of these values set. -->
   <style> body { padding: 0; margin: 0; } </style>
